@@ -9,6 +9,182 @@
 
 <metal:content-core fill-slot="content-core">
 <metal:main_macro define-macro="content-core">
+  <script>
+    function show_iframe(){
+      jQuery(".loading_message").hide();
+    }
+  </script>
+<style>
+    .loading_message {
+      height:450px; 
+      width:900px;
+      line-height:450px;
+      position:absolute;
+    }
+#squaresWaveG{
+position:absolute;
+top:250px;
+left:330px;
+width:240px;
+height:29px;
+z-index:1000;}
+
+.squaresWaveG{
+position:absolute;
+top:0;
+background-color:#C0D630;
+width:29px;
+height:29px;
+-moz-animation-name:bounce_squaresWaveG;
+-moz-animation-duration:1.3s;
+-moz-animation-iteration-count:infinite;
+-moz-animation-direction:linear;
+-webkit-animation-name:bounce_squaresWaveG;
+-webkit-animation-duration:1.3s;
+-webkit-animation-iteration-count:infinite;
+-webkit-animation-direction:linear;
+-ms-animation-name:bounce_squaresWaveG;
+-ms-animation-duration:1.3s;
+-ms-animation-iteration-count:infinite;
+-ms-animation-direction:linear;
+-o-animation-name:bounce_squaresWaveG;
+-o-animation-duration:1.3s;
+-o-animation-iteration-count:infinite;
+-o-animation-direction:linear;
+animation-name:bounce_squaresWaveG;
+animation-duration:1.3s;
+animation-iteration-count:infinite;
+animation-direction:linear;
+}
+
+#squaresWaveG_1{
+left:0;
+-moz-animation-delay:0.52s;
+-webkit-animation-delay:0.52s;
+-ms-animation-delay:0.52s;
+-o-animation-delay:0.52s;
+animation-delay:0.52s;
+}
+
+#squaresWaveG_2{
+left:30px;
+-moz-animation-delay:0.65s;
+-webkit-animation-delay:0.65s;
+-ms-animation-delay:0.65s;
+-o-animation-delay:0.65s;
+animation-delay:0.65s;
+}
+
+#squaresWaveG_3{
+left:60px;
+-moz-animation-delay:0.78s;
+-webkit-animation-delay:0.78s;
+-ms-animation-delay:0.78s;
+-o-animation-delay:0.78s;
+animation-delay:0.78s;
+}
+
+#squaresWaveG_4{
+left:90px;
+-moz-animation-delay:0.91s;
+-webkit-animation-delay:0.91s;
+-ms-animation-delay:0.91s;
+-o-animation-delay:0.91s;
+animation-delay:0.91s;
+}
+
+#squaresWaveG_5{
+left:120px;
+-moz-animation-delay:1.04s;
+-webkit-animation-delay:1.04s;
+-ms-animation-delay:1.04s;
+-o-animation-delay:1.04s;
+animation-delay:1.04s;
+}
+
+#squaresWaveG_6{
+left:150px;
+-moz-animation-delay:1.17s;
+-webkit-animation-delay:1.17s;
+-ms-animation-delay:1.17s;
+-o-animation-delay:1.17s;
+animation-delay:1.17s;
+}
+
+#squaresWaveG_7{
+left:180px;
+-moz-animation-delay:1.3s;
+-webkit-animation-delay:1.3s;
+-ms-animation-delay:1.3s;
+-o-animation-delay:1.3s;
+animation-delay:1.3s;
+}
+
+#squaresWaveG_8{
+left:210px;
+-moz-animation-delay:1.43s;
+-webkit-animation-delay:1.43s;
+-ms-animation-delay:1.43s;
+-o-animation-delay:1.43s;
+animation-delay:1.43s;
+}
+
+@-moz-keyframes bounce_squaresWaveG{
+0%{
+background-color:#C0D630;
+}
+
+100%{
+background-color:#FFFFFF;
+}
+
+}
+
+@-webkit-keyframes bounce_squaresWaveG{
+0%{
+background-color:#C0D630;
+}
+
+100%{
+background-color:#FFFFFF;
+}
+
+}
+
+@-ms-keyframes bounce_squaresWaveG{
+0%{
+background-color:#C0D630;
+}
+
+100%{
+background-color:#FFFFFF;
+}
+
+}
+
+@-o-keyframes bounce_squaresWaveG{
+0%{
+background-color:#C0D630;
+}
+
+100%{
+background-color:#FFFFFF;
+}
+
+}
+
+@keyframes bounce_squaresWaveG{
+0%{
+background-color:#C0D630;
+}
+
+100%{
+background-color:#FFFFFF;
+}
+
+}
+
+</style>
   <dl class="enableFormTabbing">
 
     <!-- Map View -->
@@ -16,6 +192,27 @@
       <dt id="fieldsetlegend-mapview" i18n:translate="">Map View</dt>
       <dd id="fieldset-mapview" style="margin:0px; padding-top:0px !important">
         <div class="mapview-field" style="border:1px solid #BFD630; border-top:0px;">
+          <div class="loading_message" tal:condition="context/has_iframe">
+            <div id="squaresWaveG">
+              <div id="squaresWaveG_1" class="squaresWaveG">
+              </div>
+              <div id="squaresWaveG_2" class="squaresWaveG">
+              </div>
+              <div id="squaresWaveG_3" class="squaresWaveG">
+              </div>
+              <div id="squaresWaveG_4" class="squaresWaveG">
+              </div>
+              <div id="squaresWaveG_5" class="squaresWaveG">
+              </div>
+              <div id="squaresWaveG_6" class="squaresWaveG">
+              </div>
+              <div id="squaresWaveG_7" class="squaresWaveG">
+              </div>
+              <div id="squaresWaveG_8" class="squaresWaveG">
+              </div>
+            </div>
+            <center>Please wait, loading map...</center>
+          </div>
           <tal:service replace="structure html" />
         </div>
       </dd>
