@@ -3,6 +3,8 @@ Changelog
 
 1.4-dev - (unreleased)
 ----------------------
+* Feature: show a loading icon before loading the map
+  [tiberich #17338]
 
 1.3 - (2013-11-08)
 ------------------
